--- a/prototyp/index.html
+++ b/prototyp/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="refresh" content="0;URL=main.php">
 </head>
-<!-- $ID$ -->
+<!-- $Id: index.html,v 1.3 2001/11/11 14:14:16 hifix Exp $ -->
 <body bgcolor="#FFFFFF">
 
 </body>
