Ergaenzung $ und Entfernung der absoluten Linkangaben (sicher ist sicher)

--- a/alexgn/anmelden.html
+++ b/alexgn/anmelden.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!-- $Id: anmelden.html,v 1.2 2001/11/14 00:11:07 hifix Exp $ -->
 <html>
 <head>
-  <title>index</title>      
+  <title>index</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 </head>
 
@@ -16,7 +17,7 @@
     </td>
  </tr>
  <tr>
-    <td> 
+    <td>
      <table cellpadding="2" cellspacing="2" border="0" width="100%" bgcolor="#ffffcc">
        <tbody>
          <tr>
@@ -24,16 +25,16 @@
            </td>
            <td valign="Top" align="center"><a href="mdaten">meine daten</a>
            </td>
-           <td valign="Top" align="center"><a href="/texte">texte</a><br>
+           <td valign="Top" align="center"><a href="texte">texte</a><br>
            </td>
-           <td valign="Top" align="center"><a href="/sprache">sprache wechseln</a>
+           <td valign="Top" align="center"><a href="sprache">sprache wechseln</a>
            </td>
-           <td valign="Top" align="center"><a href="/hilfe">hilfe</a><br>
+           <td valign="Top" align="center"><a href="hilfe">hilfe</a><br>
            </td>
-           <td valign="Top" align="center"><a href="/kontakt">kontakt</a><br>
+           <td valign="Top" align="center"><a href="kontakt">kontakt</a><br>
            </td>
          </tr>
-       </tbody> 
+       </tbody>
      </table>
     </td>
  </tr>
@@ -45,7 +46,7 @@
         <td valign="Top"><font color="#000000"><b>Anmelden</b>
 	  <br><br>
 	  Um einen Text &uuml;bersetzen zu lassen oder um einen Text zu &uuml;bersetzen,
-	   m&uuml;ssen Sie sich ersteinmal anmelden. F&uuml;llen Sie hierzu 
+	   m&uuml;ssen Sie sich ersteinmal anmelden. F&uuml;llen Sie hierzu
 	   das folgende Formular einfach aus und senden Sie es uns zu!</font><br>
         </td>
        </tr>
@@ -54,7 +55,7 @@
         </td>
        </tr>
        <tr>
-        <td><form action="mailto:admin@otmp.org" method="post" enctype="text/plain">
+        <td><form action="" method="post" enctype="text/plain">
 	       Vorname:  &nbsp;&nbsp;&nbsp;<input name="vorname" type="text" size="20"><br>
 	       Nachname: &nbsp;<input name="nachname" type="text" size="20"><br>
 	       Geschlecht: <input name="geschlecht" type="text" size="20"><br>
@@ -67,7 +68,7 @@
 	       oder <br>
 	       <input type="checkbox" name="anmeldenals" value="normal">Normaler Benutzer<br>
 	       <br>
-	       <input type="submit">	         
+	       <input type="submit">
 	    </form>
 	</td>
        </tr>
