--- a/alexgn/alexindex.html
+++ b/alexgn/alexindex.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!-- $Id: alexindex.html,v 1.3 2001/11/14 00:11:07 hifix Exp $ -->
 <html>
 <head>
-  <title>index</title>      
+  <title>index</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 </head>
 
@@ -16,7 +17,7 @@
     </td>
  </tr>
  <tr>
-    <td> 
+    <td>
      <table cellpadding="2" cellspacing="2" border="0" width="100%" bgcolor="#ffffcc">
        <tbody>
          <tr>
@@ -24,16 +25,16 @@
            </td>
            <td valign="Top" align="center"><a href="mdaten">meine daten</a>
            </td>
-           <td valign="Top" align="center"><a href="/texte">texte</a><br>
+           <td valign="Top" align="center"><a href="texte">texte</a><br>
            </td>
-           <td valign="Top" align="center"><a href="/sprache">sprache wechseln</a>
+           <td valign="Top" align="center"><a href="sprache">sprache wechseln</a>
            </td>
-           <td valign="Top" align="center"><a href="/hilfe">hilfe</a><br>
+           <td valign="Top" align="center"><a href="hilfe">hilfe</a><br>
            </td>
-           <td valign="Top" align="center"><a href="/kontakt">kontakt</a><br>
+           <td valign="Top" align="center"><a href="kontakt">kontakt</a><br>
            </td>
          </tr>
-       </tbody> 
+       </tbody>
      </table>
     </td>
  </tr>
