--- a/prototyp/index.html
+++ b/prototyp/index.html
@@ -1,11 +1,27 @@
 <html>
 <head>
-<title>Untitled Document</title>
+<title>Welcome to OTMP</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<meta http-equiv="refresh" content="0;URL=main.php">
+<!--meta http-equiv="refresh" content="0;URL=main.php"-->
 </head>
-<!-- $Id: index.html,v 1.3 2001/11/11 14:14:16 hifix Exp $ -->
-<body bgcolor="#FFFFFF">
+<!-- $Id: index.html,v 1.4 2001/11/20 17:21:44 darkpact Exp $ -->
+<body bgcolor="#FFFFFF" leftmargin="3" topmargin="1" marginwidth="1">
+
+<h1 align="center">OTMP</h1>
+
+<p>
+<table width="100%">
+<tr><td width="50%" align="right"><img src="flaggen/fld.gif" alt="D"> <img src="flaggen/fla.gif" alt="A"> <img src="flaggen/flch.gif" alt="CH"></td><td width="50%" align="left"><a href="main.php?lang=de">Deutsch</a></td></tr>
+<tr><td align="right"><img src="flaggen/flus.gif" alt="US"> <img src="flaggen/flgb.gif" alt="GB"> <img src="flaggen/flca.gif" alt="CA"></td><td align="left"><a href="main.php?lang=en">English</a></td></tr>
+<tr><td align="right"><img src="flaggen/flt.gif" alt="T"></td><td align="left"><a href="main.php?lang=tur">Türkisch</a></td></tr>
+<tr><td align="right"><img src="flaggen/flf.gif" alt="F"> <img src="flaggen/flca.gif" alt="CA"> <img src="flaggen/flch.gif" alt="CH"></td><td align="left"><a href="main.php?lang=fr"></a>Francais</a></td></tr>
+<tr><td align="right"><img src="flaggen/fli.gif" alt="I"> <img src="flaggen/flch.gif" alt="CH"></td><td align="left"><a href="main.php?lang=it"></a>Italiano</a></td></tr>
+<!--
+<tr><td align="right"><img src="flaggen/flf.gif" alt="xx"></td><td align="left"><a href="main.php?lang="></a>Ghana</a></td></tr>
+<tr><td align="right"><img src="flaggen/flf.gif" alt="xx"></td><td align="left"><a href="main.php?lang="></a>Nigeria</a></td></tr>
+-->
+</table>
+</p>
 
 </body>
 </html>
