--- a/Release1/index.html
+++ b/Release1/index.html
@@ -1,5 +1,5 @@
 <html>
-<!-- $Id: index.html,v 1.1 2001/11/22 20:15:33 darkpact Exp $ -->
+<!-- $Id: index.html,v 1.2 2001/11/23 08:03:04 darkpact Exp $ -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Welcome to OTMP</title>
@@ -12,14 +12,13 @@
 <tr><td colspan="2"><h1 align="center">Welcome to OTMP</h1></td></tr>
 <tr><td align="right"><img src="imgs/flag_us.gif" alt="US">
                       <img src="imgs/flag_gb.gif" alt="GB">
-                      <img src="imgs/flag_ca.gif" alt="CA"></td>
+                      <img src="imgs/flag_ca.gif" alt="CA">
+                      <img src="imgs/flag_au.gif" alt="AU"></td>
     <td align="left"><a href="main.php?langs=us">English</a></td></tr>
 <tr><td align="right"><img src="imgs/flag_de.gif" alt="DE">
-                      <img src="imgs/flag_au.gif" alt="AU">
+                      <img src="imgs/flag_at.gif" alt="AT">
                       <img src="imgs/flag_ch.gif" alt="CH"></td>
     <td align="left"><a href="main.php?langs=de">Deutsch</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_tu.gif" alt="TU"></td>
-    <td align="left"><a href="main.php?langs=tu"></a>Türkisch</a></td></tr>
 <tr><td align="right"><img src="imgs/flag_fr.gif" alt="FR">
                       <img src="imgs/flag_ca.gif" alt="CA">
                       <img src="imgs/flag_ch.gif" alt="CH"></td>
@@ -27,19 +26,24 @@
 <tr><td align="right"><img src="imgs/flag_it.gif" alt="IT">
                       <img src="imgs/flag_ch.gif" alt="CH"></td>
     <td align="left"><a href="main.php?langs=it"></a>Italiano</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_ur.gif" alt="UR">
-                      <img src="imgs/flag_es.gif" alt="ES"></td>
+<tr><td align="right"><img src="imgs/flag_es.gif" alt="ES">
+                      <img src="imgs/flag_ur.gif" alt="UR"></td>
     <td align="left"><a href="main.php?langs=es"></a>Espanol</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_br.gif" alt="BR">
-                      <img src="imgs/flag_pr.gif" alt="PR"></td>
+<tr><td align="right"><img src="imgs/flag_pr.gif" alt="PR">
+                      <img src="imgs/flag_br.gif" alt="BR"></td>
     <td align="left"><a href="main.php?langs=pr"></a>Protugisisch</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_hk.gif" alt="HK">
-                      <img src="imgs/flag_ci.gif" alt="CI"></td>
-    <td align="left"><a href="main.php?langs=ci"></a>Chinesisch</a></td></tr>
 <tr><td align="right"><img src="imgs/flag_jp.gif" alt="JP"></td>
     <td align="left"><a href="main.php?langs=jp"></a>Japanisch</a></td></tr>
+<tr><td align="right"><img src="imgs/flag_ci.gif" alt="CI">
+                      <img src="imgs/flag_hk.gif" alt="HK"></td>
+    <td align="left"><a href="main.php?langs=ci"></a>Chinesisch</a></td></tr>
+<!--tr><td align="right"><img src="imgs/flag_sk.gif" alt="SK">
+                      <img src="imgs/flag_nk.gif" alt="NK"></td>
+    <td align="left"><a href="main.php?langs=ci"></a>Koreanisch</a></td></tr-->
 <tr><td align="right"><img src="imgs/flag_in.gif" alt="IN"></td>
     <td align="left"><a href="main.php?langs=in"></a>Hindi</a></td></tr>
+<tr><td align="right"><img src="imgs/flag_tu.gif" alt="TU"></td>
+    <td align="left"><a href="main.php?langs=tu"></a>Türkisch</a></td></tr>
 </table>
 </p>
 
