--- a/Release1/index.html
+++ b/Release1/index.html
@@ -1,5 +1,5 @@
 <html>
-<!-- $Id: index.html,v 1.2 2001/11/23 08:03:04 darkpact Exp $ -->
+<!-- $Id: index.html,v 1.3 2001/12/14 09:36:25 darkpact Exp $ -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Welcome to OTMP</title>
@@ -14,7 +14,7 @@
                       <img src="imgs/flag_gb.gif" alt="GB">
                       <img src="imgs/flag_ca.gif" alt="CA">
                       <img src="imgs/flag_au.gif" alt="AU"></td>
-    <td align="left"><a href="main.php?langs=us">English</a></td></tr>
+    <td align="left"><a href="main.php?langs=us"></a>English</a></td></tr>
 <tr><td align="right"><img src="imgs/flag_de.gif" alt="DE">
                       <img src="imgs/flag_at.gif" alt="AT">
                       <img src="imgs/flag_ch.gif" alt="CH"></td>
