--- a/Release1/index.html
+++ b/Release1/index.html
@@ -1,51 +1,88 @@
 <html>
-<!-- $Id: index.html,v 1.3 2001/12/14 09:36:25 darkpact Exp $ -->
+<!-- $Id: index.html,v 1.4 2001/12/17 18:31:54 hifix Exp $ -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Welcome to OTMP</title>
+<script language="JavaScript">
+<!--
+function MM_reloadPage(init) {  //reloads the window if Nav4 resized
+  if (init==true) with (navigator) {if ((appName=="Netscape")&&(parseInt(appVersion)==4)) {
+    document.MM_pgW=innerWidth; document.MM_pgH=innerHeight; onresize=MM_reloadPage; }}
+  else if (innerWidth!=document.MM_pgW || innerHeight!=document.MM_pgH) location.reload();
+}
+MM_reloadPage(true);
+// -->
+</script>
 </head>
 <body bgcolor="#FFFFFF" leftmargin="3" topmargin="1" marginwidth="1">
 
 <p>
+<p>&nbsp;</p>
+<p><img src="imgs/otmp_logo.gif" width="585" height="106"></p>
 <table width="100%">
-<tr><td width="50%"><br></td><td width="50%"><br></td></tr>
-<tr><td colspan="2"><h1 align="center">Welcome to OTMP</h1></td></tr>
-<tr><td align="right"><img src="imgs/flag_us.gif" alt="US">
-                      <img src="imgs/flag_gb.gif" alt="GB">
-                      <img src="imgs/flag_ca.gif" alt="CA">
-                      <img src="imgs/flag_au.gif" alt="AU"></td>
-    <td align="left"><a href="main.php?langs=us"></a>English</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_de.gif" alt="DE">
-                      <img src="imgs/flag_at.gif" alt="AT">
-                      <img src="imgs/flag_ch.gif" alt="CH"></td>
-    <td align="left"><a href="main.php?langs=de">Deutsch</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_fr.gif" alt="FR">
-                      <img src="imgs/flag_ca.gif" alt="CA">
-                      <img src="imgs/flag_ch.gif" alt="CH"></td>
-    <td align="left"><a href="main.php?langs=fr"></a>Francais</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_it.gif" alt="IT">
-                      <img src="imgs/flag_ch.gif" alt="CH"></td>
-    <td align="left"><a href="main.php?langs=it"></a>Italiano</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_es.gif" alt="ES">
-                      <img src="imgs/flag_ur.gif" alt="UR"></td>
-    <td align="left"><a href="main.php?langs=es"></a>Espanol</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_pr.gif" alt="PR">
-                      <img src="imgs/flag_br.gif" alt="BR"></td>
-    <td align="left"><a href="main.php?langs=pr"></a>Protugisisch</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_jp.gif" alt="JP"></td>
-    <td align="left"><a href="main.php?langs=jp"></a>Japanisch</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_ci.gif" alt="CI">
-                      <img src="imgs/flag_hk.gif" alt="HK"></td>
-    <td align="left"><a href="main.php?langs=ci"></a>Chinesisch</a></td></tr>
-<!--tr><td align="right"><img src="imgs/flag_sk.gif" alt="SK">
+  <tr valign="top"> 
+    <td> 
+      <p><font face="Geneva, Arial, Helvetica, san-serif"><b>Willkommen auf der 
+        offenen &Uuml;bersetzungsplattform OTMP.</b><br>
+        Diese Platform soll es erm&ouml;glichen, die Sprachen dieser Welt zu erhalten 
+        indem Sie ein Anlaufpunkt f&uuml;r &Uuml;bersetzungen bietet. Besonderen 
+        Fokus legt diese Plattform auf die finanziell Benachteiligten Menschen 
+        der Welt denen es an Mitteln und Resourcen fehlt Ihre oder andrer Sprachen 
+        am leben zu erhalten.</font><br>
+        <br>
+        Diese Seite gibt es auch in den folgenden Sprachen: <br>
+        <font size="-1" face="Geneva, Arial, Helvetica, san-serif">[<a href="main.php">deutsch</a>]
+		[T&uuml;rk&ccedil;e]  
+        [catal&agrave;] [&#917;&#955;&#955;&#951;&#957;&#953;&#954;&#940;&nbsp;(Ellinika)] [English] [espa&ntilde;ol] [Indonesia] 
+        [&#1056;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;&nbsp;(Russkij)] </font></p>
+      </td>
+    <td width="20">&nbsp;</td>
+    <td> 
+      <p><br>
+      </p>
+      <table border="0" cellspacing="2" cellpadding="0">
+        <tr align="left"> 
+          <td nowrap colspan="3"><font face="Geneva, Arial, Helvetica, san-serif">Bitte 
+            w&auml;hlen Sie eine Sprache:</font></td>
+        </tr>
+        <tr> 
+          <td nowrap align="right"><img src="imgs/flag_us.gif" alt="US" hspace="2"><img src="imgs/flag_gb.gif" alt="GB" hspace="2"><img src="imgs/flag_ca.gif" alt="CA" hspace="2"><img src="imgs/flag_au.gif" alt="AU" hspace="2"></td>
+          <td width="5" nowrap>&nbsp;</td>
+          <td nowrap><font face="Geneva, Arial, Helvetica, san-serif">English</font></td>
+        </tr>
+        <tr> 
+          <td nowrap align="right"><img src="imgs/flag_de.gif" alt="DE"> <img src="imgs/flag_at.gif" alt="AT"> 
+            <img src="imgs/flag_ch.gif" alt="CH"></td>
+          <td width="5" nowrap>&nbsp;</td>
+          <td nowrap><a href="main.php?langs=de"><font face="Geneva, Arial, Helvetica, san-serif">Deutsch</font></a></td>
+        </tr>
+        <tr> 
+          <td nowrap align="right"><img src="imgs/flag_in.gif" alt="IN"></td>
+          <td width="5" nowrap>&nbsp;</td>
+          <td nowrap><font face="Geneva, Arial, Helvetica, san-serif">Hindi</font></td>
+        </tr>
+        <tr> 
+          <td nowrap align="right"><img src="imgs/flag_tu.gif" alt="TU"></td>
+          <td width="5" nowrap>&nbsp;</td>
+          <td nowrap>T&uuml;rk&ccedil;e</td>
+        </tr>
+        <tr> 
+          <td nowrap>&nbsp;</td>
+          <td width="10" nowrap>&nbsp;</td>
+          <td nowrap>&nbsp;</td>
+        </tr>
+      </table>
+      <p>&nbsp;</p>
+    </td>
+  </tr>
+  <tr> 
+    <td colspan="3">&nbsp;</td>
+  </tr>
+  <!--tr><td align="right"><img src="imgs/flag_sk.gif" alt="SK">
                       <img src="imgs/flag_nk.gif" alt="NK"></td>
     <td align="left"><a href="main.php?langs=ci"></a>Koreanisch</a></td></tr-->
-<tr><td align="right"><img src="imgs/flag_in.gif" alt="IN"></td>
-    <td align="left"><a href="main.php?langs=in"></a>Hindi</a></td></tr>
-<tr><td align="right"><img src="imgs/flag_tu.gif" alt="TU"></td>
-    <td align="left"><a href="main.php?langs=tu"></a>Türkisch</a></td></tr>
 </table>
-</p>
+<p></p>
 
 </body>
 </html>
