--- a/Release1/index.html
+++ b/Release1/index.html
@@ -1,5 +1,5 @@
 <html>
-<!-- $Id: index.html,v 1.5 2001/12/18 23:29:22 hifix Exp $ -->
+<!-- $Id: index.html,v 1.6 2002/01/28 17:47:27 hifix Exp $ -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Welcome to OTMP</title>
@@ -30,6 +30,8 @@ MM_reloadPage(true);
         der Welt denen es an Mitteln und Resourcen fehlt Ihre oder andrer Sprachen
         am leben zu erhalten.</font><br>
         <br>
+        Dies ist eine Demonstrationsseite. Die grundlegenden Funktionen k&ouml;nnen hier getestet werden.
+        <br><br>
         Diese Seite gibt es auch in den folgenden Sprachen: <br>
         <font size="-1" face="Geneva, Arial, Helvetica, san-serif">[<a href="main.php">deutsch</a>]
     [T&uuml;rk&ccedil;e]
